feat-fix: Added userId data member after new UserDTO record class; and refactored to use new Employee constructor and toList().